# beanlang-grammar

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-beanlang.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_beanlang/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBeanlang/: beanlang.h
bindings/swift/TreeSitterBeanlangTests/: TreeSitterBeanlangTests.swift
src/: grammar.json  parser.c
test/: test.bl
